--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-        <div class="container">
-            <p>lore</p>
+    <div class="container">
+        <div class="col-6 offset-3">
+            <h1 class="text-center text-primary">Check our creativity</h1>
+            <h2 class="text-center text-primary">We are the best and we know it!</h2>
+            <button type="button" class="btn btn-danger text-center">Ask for price</button>
         </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
