--- a/index.html
+++ b/index.html
@@ -13,8 +13,30 @@
     <div class="container">
         <div class="col-6 offset-3">
             <h1 class="text-center text-primary">Check our creativity</h1>
-            <h2 class="text-center text-primary">We are the best and we know it!</h2>
-            <button type="button" class="btn btn-danger text-center">Ask for price</button>
+            <h3 class="text-center text-primary">We are the best and we know it!</h2>
+            <button type="button" class="btn btn-danger d-block mx-auto">Ask for price</button>
+        </div>
+        <div class="row">
+        <div class="col-3 card">
+            <img class="card-img-top fourimages mx-auto" src="images/creativity_icon1.png" alt="Card image pax first"/>
+            <h4 class="card-title text-center">Lorem ipsum</h4>
+            <p class="card-text text-center">Cras vel eleifend nisl, ac efficitur purus. Vestibulum vestibulum aliquam lectusmattis ac.</p>
+        </div>
+        <div class="col-3 card">
+            <img class="card-img-top fourimages mx-auto" src="images/creativity_icon2.png" alt="Card image pax second"/>
+            <h4 class="card-title text-center">Aenean eget</h4>
+            <p class="card-text text-center">Donec sagittis accumsan diam, eu efficitur nunc lobortis eget. Pellentesque posuere.</p>
+        </div>
+        <div class="col-3 card">
+            <img class="card-img-top fourimages mx-auto" src="images/creativity_icon3.png" alt="Card image pax third"/>
+            <h4 class="card-title text-center">Nulla felis quam</h4>
+            <p class="card-text text-center">Nulla felis quam, malesuada quis tincidunt vitae, iaculis id massa. Mauris pellentesque.</p>
+        </div>
+        <div class="col-3 card">
+            <img class="card-img-top fourimages mx-auto" src="images/creativity_icon4.png" alt="Card image pax fourth"/>
+            <h4 class="card-title text-center">Mauris</h4>
+            <p class="card-text text-center">Pellentesque posuere nisl a posuere mattis. Quisque nuet congue at, variuse. </p>
+        </div>
         </div>
     </div>
     <script src="js/main.js"></script>
