--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
@@ -16,6 +17,9 @@
             <h2 class="text-center text-primary">We are the best and we know it!</h2>
             <button type="button" class="btn btn-danger text-center">Ask for price</button>
         </div>
+    </div>
+    <div class=" p-5 m-5 d-flex justify-content-center align-items-center creativityf">
+      <button type="button" class="btn btn-primary btn-lg text-center mybutton">Ask for price</button>
     </div>
     <script src="js/main.js"></script>
 </body>
