adding jpg + adding css

--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
             <h1 class="text-center text-primary">Check our creativity</h1>
             <h3 class="text-center text-primary">We are the best and we know it!</h2>
             <button type="button" class="btn btn-danger d-block mx-auto">Ask for price</button>
-            <div class="video">
-                <div class="play-btn">
-                        <video controls src="bd_video.mp4" width="715px" height="447px"></video>
-                </div>
-            </div>
         </div>
+                <div class="container-video">
+                    <div class="img-laptop">
+                        <div class="play-btn">
+                                <video controls src="video/bd_video.mp4" width="715px" height="447px"></video>
+                        </div>
+                    </div>
+                </div>
         <div class="row">
             <div class="col-6">
                <img class="card-img videobackimg" src="images/creativity_message.png" alt="Mesage image pax first"/>
